# predictionmonitor

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  daily.yml
config/: settings.yml  taxonomy.yml
docs/: latest-report.md
docs/reports/: report-2026-06-03.md  report-2026-06-04.md  report-2026-06-05.md  report-2026-06-06.md  report-2026-06-07.md  report-2026-06-08.md  report-2026-06-09.md  report-2026-06-10.md  report-2026-06-11.md  report-2026-06-12.md  report-2026-06-13.md  report-2026-06-14.md  report-2026-06-15.md  report-2026-06-16.md  report-2026-06-17.md  report-2026-06-18.md  report-2026-06-19.md  report-2026-06-20.md  report-2026-06-21.md  report-2026-06-22.md  report-2026-06-23.md  report-2026-06-24.md  report-2026-06-25.md  report-2026-06-26.md  report-2026-06-27.md  report-2026-06-28.md  report-2026-06-29.md  report-2026-06-30.md  report-2026-07-01.md  report-2026-07-02.md  report-2026-07-03.md  report-2026-07-04.md  report-2026-07-05.md  report-2026-07-06.md  report-2026-07-07.md  report-2026-07-08.md  report-2026-07-09.md  report-2026-07-10.md  report-2026-07-11.md  report-2026-07-12.md  (+11 more)
history/: events.jsonl
src/predictionmonitor/: __init__.py  __main__.py  activity.py  anomaly.py  arb.py  backtest.py  catalog.py  cli.py  history.py  http.py  pipeline.py  relevance.py  report_html.py  schema.py  viz.py  watchlist.py
tests/: test_activity.py  test_adapters.py  test_anomaly.py  test_arb.py  test_backtest.py  test_catalog.py  test_pipeline.py  test_relevance.py  test_report_html.py  test_viz.py
(+6 files in other folders)
