[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "predictionmonitor"
version = "0.1.0"
description = "Daily scanner for FMCC-relevant prediction-market activity (catalog + anomaly leads)"
requires-python = ">=3.10"
dependencies = ["requests>=2.31", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
predictionmonitor = "predictionmonitor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
